--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
+    "socket.io": "^4.5.4",
     "validator": "^13.7.0"
   }
 }
